# DEIStools

./: .gitignore  README.md  pyproject.toml
acquire/: advancedoscilloscope.py  deischannel.py  multisinegen.py
analysis/: peak_search.py
computations/: mfa.py
examples/: 1-deis_ca_online_calc_example.py  2-deis_cp_online_calc_example.py  3-deis_sequence_loop_online_calc_example.py  4-deis_cccv_protocol_online_calc_example.py  5-deis_cccv_protocol_multisine_change_online_calc_example.py  advanced_oscilloscope.py  deis_online_calc_example.py  deis_sequence_online_calc_example.py  test_advanced_oscilloscope.py  test_deischannel.py
examples/not_so_older_tests/: advanced_oscilloscope.py  deischannel_ocv.py
examples/older_tests/: test_advanced_oscilloscope.py  test_advanced_oscilloscope_battery_cycling.py
src/deistools/acquisition/: __init__.py  advancedoscilloscope.py  deischannel.py  multisinegen.py  picocalculation.py  picocalculator.py  utils.py
src/deistools/processing/: __init__.py  blockcalculation.py  blockcalculator.py  circular_buffer.py  data_loader.py  data_preparation.py  detrending.py  dmfa_functions.py  mfa.py  passband_filters.py  stft_functions.py
src/deistools/visualise/: __init__.py  fourier_space.py  impedance.py  raw_data.py
tests/: test_advanced_oscilloscope.py  test_deischannel.py  test_deischannel.py~  test_waveform_switch.py
